k8s/frontend/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eventos-frontend
  namespace: eventos-peru
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: eventos.emeday.inc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eventos-frontend
            port:
              number: 80
